# GitLite

./: CMakeLists.txt  GitLite.workspace  README.md
GitLite/: CMakeLists.txt  GitCloneDialog.cpp  GitCloneDialog.h  GitCloneProgressDlg.cpp  GitCloneProgressDlg.h  GitConfig.cpp  GitConfig.h  GitLite.project  GitLiteJSON.cpp  GitLiteJSON.h  MainFrame.cpp  MainFrame.h  PersistentManager.cpp  PersistentManager.h  SSHKeysDlg.cpp  SSHKeysDlg.h  UserNamePasswordDlg.cpp  UserNamePasswordDlg.h  cJSON.c  cJSON.h  main.cpp  wxSimpleJSON.cpp  wxSimpleJSON.h  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp  wxcrafter_bitmaps.cpp
GitLiteLib/: CMakeLists.txt  GitBranch.cpp  GitBranch.h  GitCheckoutCommand.cpp  GitCheckoutCommand.h  GitClone.cpp  GitClone.h  GitCommandBase.cpp  GitCommandBase.h  GitCredentials.cpp  GitCredentials.h  GitErrors.h  GitEvents.cpp  GitEvents.h  GitLiteExports.h  GitLiteHelperThread.cpp  GitLiteHelperThread.h  GitLiteLib.project  GitLiteRepo.cpp  GitLiteRepo.h
cmake/Modules/: FindLibGit2.cmake  FindLibSSH2.cmake
wxLibGit/: GitEvents.cpp  wxLibGit.cpp
