cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
include(FindLibSSH2)
include(FindLibGit2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

message("-- LIBSSH2_INCLUDE: ${LIBSSH2_INCLUDE}")
message("-- LIBSSH2_LIBRARY: ${LIBSSH2_LIBRARY}")
message("-- LIBGIT2_INCLUDE: ${LIBGIT2_INCLUDE}")
message("-- LIBGIT2_LIBRARY: ${LIBGIT2_LIBRARY}")

add_subdirectory(GitLiteLib)
add_subdirectory(GitLite)